Implemented swagger docs for auth and networks, began working on actors swagger docs
