# storage/api-docs/api-docs.json
@@ -23,6 +23,221 @@
                 }
             }
         },
+        "/api/networks": {
+            "get": {
+                "tags": [
+                    "Networks"
+                ],
+                "summary": "Display a listing of the network resource in swagger API documentation.",
+                "description": "Displays all the networks",
+                "operationId": "1b42dd549ba84c0418e48debd8f07205",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation, Returns a list of Networks in JSON format"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Networks"
+                ],
+                "summary": "Create a new Network",
+                "description": "Stores the Network in the Database",
+                "operationId": "post",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "address"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Sample name"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Sample address"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": ""
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/networks/{id}": {
+            "get": {
+                "tags": [
+                    "Networks"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets a network by ID",
+                "operationId": "e842b8aa9dfb39ad89777fa261b6458a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Network id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Networks"
+                ],
+                "summary": "Update a Network",
+                "description": "Stores the updated Network in the DB",
+                "operationId": "networks_put",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Store id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id",
+                                    "name",
+                                    "address"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Sample name"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Sample address"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": ""
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Networks"
+                ],
+                "summary": "Delete a Network",
+                "description": "Delete a Network By ID",
+                "operationId": "network_destroy",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id of a Network",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status_code": {
+                                            "type": "integer",
+                                            "example": "204"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/shows": {
             "get": {
                 "tags": [
@@ -49,7 +264,7 @@
                 ],
                 "summary": "Create a new Show",
                 "description": "Stores the Show in the Database",
-                "operationId": "service",
+                "operationId": "store",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -171,8 +386,8 @@
                     "Shows"
                 ],
                 "summary": "Update a Show",
-                "description": "Update Show",
-                "operationId": "put",
+                "description": "Stores the updated Show in the DB",
+                "operationId": "networks_put",
                 "parameters": [
                     {
                         "name": "id",
@@ -191,14 +406,8 @@
                             "schema": {
                                 "required": [
                                     "id",
-                                    "title",
-                                    "genre",
-                                    "synopsis",
-                                    "user_rating",
-                                    "network",
-                                    "creator",
-                                    "seasons",
-                                    "src"
+                                    "name",
+                                    "address"
                                 ],
                                 "properties": {
                                     "title": {
